--- a/styles/secondary.module.css
+++ b/styles/secondary.module.css
@@ -1,26 +1,14 @@
-* {
-  margin: 0;
-  box-sizing: border-box;
-  transition: 0.3s;
-}
-
-body {
-  background: black;
-}
-
-a {
-  display: inline-block;
-  color: inherit;
+.mainTitle {
   text-decoration: none;
-  transition: 0.3s;
+  color: black;
 }
 
-a:hover {
+.mainTitle:hover {
   transform: scale(1.1);
   text-shadow: 0 0 5px hsl(300, 100%, 70%);
 }
 
-#classmateCard {
+.classmateCard {
   width: 750px;
   margin: auto;
   border: 1px solid hsl(300, 100%, 25%);
@@ -28,7 +16,7 @@ a:hover {
   box-shadow: 2px 2px 15px hsl(300, 100%, 70%);
 }
 
-#infodexLink {
+.infodexLink {
   background: hsl(300, 100%, 25%);
   text-align: center;
   border-radius: 25px 25px 0 0;
@@ -37,12 +25,12 @@ a:hover {
   padding: 15px;
 }
 
-#header {
+.secondaryHeader {
   background: black;
   display: flex;
 }
 
-#bodyDiv {
+.secondaryBody {
   background: hsl(300, 100%, 25%);
   border-radius: 0 0 25px 25px;
 }
